--- a/airbyte-integrations/connectors/source-amazon-ads/build.gradle
+++ b/airbyte-integrations/connectors/source-amazon-ads/build.gradle
@@ -7,3 +7,7 @@ plugins {
 airbytePython {
     moduleDirectory 'source_amazon_ads'
 }
+
+dependencies {
+    implementation files(project(':airbyte-integrations:bases:source-acceptance-test').airbyteDocker.outputs)
+}
