--- a/.github/workflows/test-command.yml
+++ b/.github/workflows/test-command.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Write Integration Test Credentials
         run: ./tools/bin/ci_credentials.sh
         env:
-          AMAZON_ADS_CREDS: ${{ secrets.AMAZON_ADS_CREDS }}
+          AMAZON_ADS_TEST_CREDS: ${{ secrets.AMAZON_ADS_TEST_CREDS }}
           AMPLITUDE_INTEGRATION_TEST_CREDS: ${{ secrets.AMPLITUDE_INTEGRATION_TEST_CREDS }}
           ADWORDS_INTEGRATION_TEST_CREDS: ${{ secrets.ADWORDS_INTEGRATION_TEST_CREDS }}
           AWS_S3_INTEGRATION_TEST_CREDS: ${{ secrets.AWS_S3_INTEGRATION_TEST_CREDS }}
