--- a/airbyte-integrations/connectors/source-bamboo-hr/sample_files/configured_catalog.json
+++ b/airbyte-integrations/connectors/source-bamboo-hr/sample_files/configured_catalog.json
@@ -828,13 +828,8 @@
             }
           }
         },
-        "supported_sync_modes": [
-          "full_refresh"
-        ],
-        "supported_destination_sync_modes": [
-          "overwrite",
-          "append_dedup"
-        ]
+        "supported_sync_modes": ["full_refresh"],
+        "supported_destination_sync_modes": ["overwrite", "append_dedup"]
       },
       "sync_mode": "full_refresh",
       "destination_sync_mode": "append_dedup"
